--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -1,8 +1,8 @@
 .sidebar {
-  display: inline-flex;
+  display: flex;
   flex-direction: column;
   background-color: #1e2a38;
-  height: 100vh;
+  width: 220px;
 }
 
 .profile {
@@ -21,7 +21,7 @@
   margin: 10px 10px 0px 10px;
 }
 .profile p {
-  color: #f5f7fa; /* Light gray/white for contrast */
+  color: #f5f7fa;
 
   margin-top: 20px;
   padding-right: 10px;
@@ -32,7 +32,7 @@
   flex-direction: column;
 }
 .menu p {
-  color: #f5f7fa; /* Light gray/white for contrast */
+  color: #f5f7fa;
 
   margin-left: 15px;
 }
@@ -52,6 +52,6 @@
 }
 
 .menu-item:hover {
-  background-color: #2d3c50; /* Slightly lighter navy on hover */
+  background-color: #2d3c50;
   cursor: pointer;
 }
