--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,13 @@
 
 #root{
   display: flex;
-  height: 100vh;      
-  width: 100vw;        
-  overflow: hidden; 
+  min-height: 100vh;      
+  align-items: stretch;
+  overflow-x: hidden;
+  
+}
+
+body{
+  background-color:#e3eaf2;
+  /* height: 100vh; */
 }
